<resources>
    <string name="app_name">C\u00e9der</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="company">Company</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="linkedin">LinkedIn URL</string>
    <string name="add_line1">Address Line 1</string>
    <string name="add_line2">Address Line 2</string>
    <string name="add_line3">Address Line 3</string>
    <string name="add">Add</string>
    <string name="save">Save Card</string>
    <string name="view_cards">View Cards</string>
    <string name="scan_qr">Scan QR</string>
    <string name="new_card">New Card</string>
    <string name="my_cards">My Cards</string>
    <string name="facebook_app_id">222795404795746</string>
    <string name="fb_login_protocol_scheme">fb222795404795746</string>
    <string name="title_activity_login">Sign in</string>
    <string name="no_cards">You Have No Cards</string>
    <string name="no_my_cards">Swipe down to sync your cards</string>
    <string name="copyright">&#169; Appex Corporation 2017</string>
    <string name="sync">Sync cards</string>
    <string name="basic">Basic</string>
    <string name="other">Other</string>
    <string name="permission_message">Need permission to call phone</string>
    <string name="mwlin_text">
    <![CDATA[Made with <span style="color: #e74c3c">&hearts;</span> in India]]></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--Strings for nav menu-->
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings for about page-->
    <string name="connect">Connect with us</string>
    <string name="email_about">Contact us</string>
    <string name="fb_about">Like us on Facebook</string>
    <string name="web_about">Visit our website</string>
    <string name="play_about">Rate us on Google Play</string>
    <string name="version">Version 1.0.1</string>
    <string name="view_licence">View Licenses</string>
    <string name="licence">Licenses</string>

    <!--Strings for filters-->
    <string name="filter_cards">Filter Cards</string>
    <string name="enter_category">Enter Category</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_company">Enter Company</string>
    <string name="enter_location">Enter Location</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="apply_filter">Apply Filters</string>
    <string name="title_activity_maps2">Map</string>
    <string name="google_maps_key">AIzaSyDHq-2RIYQaHNB5LLw7JxNKZE5h1XoK5bY</string>
    <string name="counter">%d of %d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
