<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        tools:context="com.appex.barcards.activities.AboutActivity">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/splash" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/version"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@android:drawable/divider_horizontal_textfield" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/connect"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/email_about"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@android:drawable/divider_horizontal_textfield" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_web"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/web_about"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@android:drawable/divider_horizontal_textfield" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_fb"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/fb_about"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@android:drawable/divider_horizontal_textfield" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_play"
            android:drawablePadding="5dp"
            android:drawableTint="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/play_about"
            android:textColor="@color/white"
            android:textSize="17sp" />
        <Button
            android:id="@+id/license_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="5dp"
            android:text="@string/view_licence"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>