<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_half"
    android:paddingTop="@dimen/padding_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="@dimen/padding_half"
            android:paddingTop="@dimen/padding_half"
            android:text="@string/filter_cards"
            android:textColor="@color/black"
            android:textSize="@dimen/typography_title" />

        <LinearLayout
            android:id="@+id/clear_filters_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/rounded_grey_bg"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="1dp">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:src="@drawable/ic_cross"
                android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/clear_filters"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default"
        android:background="@android:drawable/divider_horizontal_bright" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_default">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="@dimen/padding_2x"
                android:layout_weight="0"
                android:alpha="0.54"
                android:src="@drawable/ic_categories" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/category_filter_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_half"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/enter_category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/typography_body" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_default">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="@dimen/padding_2x"
                android:layout_weight="0"
                android:alpha="0.54"
                android:src="@drawable/ic_home_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/company_filter_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_half"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/enter_company"
                    android:textColor="@color/black"
                    android:textSize="@dimen/typography_body" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_default">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="@dimen/padding_2x"
            android:layout_weight="0"
            android:alpha="0.54"
            android:src="@android:drawable/ic_dialog_map"
            android:tint="@color/black" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/location_filter_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_half"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/enter_location"
                android:textColor="@color/black"
                android:textSize="@dimen/typography_body" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_half"
        android:gravity="end|right|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filter_cancel_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_default"
            android:layout_marginRight="@dimen/padding_default"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="@dimen/padding_half"
            android:paddingLeft="@dimen/padding_default"
            android:paddingRight="@dimen/padding_default"
            android:paddingTop="@dimen/padding_half"
            android:text="@android:string/no"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/typography_body" />

        <TextView
            android:id="@+id/filter_apply_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_default"
            android:layout_marginRight="@dimen/padding_default"
            android:background="@drawable/rounded_primary_bg"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_half"
            android:paddingEnd="@dimen/padding_default"
            android:paddingLeft="@dimen/padding_default"
            android:paddingRight="@dimen/padding_default"
            android:paddingStart="@dimen/padding_default"
            android:paddingTop="@dimen/padding_half"
            android:text="@string/apply_filter"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/typography_body" />
    </LinearLayout>
</LinearLayout>